# tarset

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
src/: consts.rs  format.rs  lib.rs  main.rs  py.rs  reader.rs  resolve.rs  sample.rs  writer.rs
