[package]
name = "tarr"
version = "0.1.0"
edition = "2024"

[lib]
name = "tarr"
crate-type = ["cdylib"]

[features]
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]

[dependencies]
anyhow = "1"
bzip2 = { version = "0.5", features = ["static"] }
flate2 = "1"
glob = "0.3"
memchr = "2"
rayon = "1"
tar = "0.4"
walkdir = "2.5"
xz2 = { version = "0.1", features = ["static"] }
zstd = "0.13"

[dependencies.pyo3]
version = "0.28.2"
features = ["abi3-py39"]

[target.'cfg(unix)'.dependencies]
libc = "0.2"
