[project]
name = "tarr"
version = "0.1.0"
license = "Apache-2.0"
description = "High-performance tar utility for Python."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
